gitops/apps/hello/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: hello
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hello.512.ch
    secretName: hello-tls
  rules:
  - host: hello.512.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: hello 
            port:
              number: 80
